<resources>
    <string name="app_name">HernanFlores_EXAMEN</string>
    <string name="lblusuario">Usuario:</string>
    <string name="lblcontrasena">Contraseña:</string>
    <string name="lblbotonlogin">LOGIN!!!</string>


    <string name="lblnombre">Nombre:</string>
    <string name="lblmonto">Monto:</string>
    <string name="lblpagomensual">Pago Mensual:</string>
    <string name="lblbotonguardar">GUARDAR</string>


</resources>
